<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">PLACE</string>
    <string name="startBtn">Start</string>
    <string name="rememberBtn">Remember</string>
    <string name="unknownBtn">Unknown</string>
    <string name="vocabBtn">Vocabulary</string>
    <string name="configBtn">Config</string>
    <string name="save">保存する</string>
    <string name="password">password</string>

    <!--SignupActivity-->
    <string name="your_password">your password</string>
    <string name="your_email">Your e-mail</string>
    <string name="signup_activity_title">sign up information</string>
    <string name="your_mLearning_experience">m-Learningの経験を教えてください</string>
    <string name="your_mLearning_environment">m-Learningで学習する際の主な環境を教えてください</string>
    <string name="create_account">create account</string>

    <!--ConfigActivity-->
    <string name="detail_option">詳細設定</string>
    <string name="measurement_time">計測時間（分）</string>
    <string name="sign_out">sign out</string>
    <string name="please_input_number">数字を入力してください．単位は[分]です．</string>
    <string name="see_throw_switch">See Throw</string>
    <string name="voice_switch">Voice</string>
    <string name="flash_card_switch">Flash Card</string>

    <!--InputNoteActivity-->
    <string name="tv_label">ラベルデータ</string>
    <string name="sp_label">問題パターン</string>
    <string name="meta_tv">その他のメタデータ等</string>

    <!--LoginActivity-->
    <string name="eMail">E-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="status">status</string>

    <!--ResultActivity-->
    <string name="restart">restart</string>
    <string name="correct_rate">正答率</string>
    <string name="amount_of_question">出題数</string>

    <!--QuestionActivity-->
    <string name="question">Question</string>

    <!-- メタデータ入力用 -->
    <string-array name="patternList">
        <item>other</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
<!--human errorを行いようにコメントアウト        <item>E</item>-->
    </string-array>

    <string-array name="labelList">
        <item>other</item>
        <item>sit</item>
        <item>walk_normal</item>
        <item>walk_seeThrow</item>
        <item>walk_sound</item>
    </string-array>

    <!-- ユーザーアンケート　mLearningの経験 -->
    <string-array name="mLearningExp">
        <item>使ったことがない</item>
        <item>たまに使う</item>
        <item>毎日使う</item>
    </string-array>

    <!-- ユーザーアンケート　mLearningの経験 -->
    <string-array name="Environment">
        <item>机に座って使う</item>
        <item>外出先(乗車中や歩行中)に使う</item>
        <item>寝転んで使う</item>
        <item>使ったことがない</item>
    </string-array>
</resources>