<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/start_btn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorDefault"
        android:scaleType="fitXY"
        android:text="@string/startBtn"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/meta_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <Button
        android:id="@+id/vocabulary_btn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@color/colorDefault"
        android:scaleType="fitXY"
        android:text="@string/vocabBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/config_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remember_btn"
        app:layout_constraintVertical_bias="0.614" />

    <Button
        android:id="@+id/config_btn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@color/colorDefault"
        android:scaleType="fitXY"
        android:text="@string/configBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unknown_btn"
        app:layout_constraintVertical_bias="0.614" />

    <Button
        android:id="@+id/remember_btn"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@color/colorDefault"
        android:scaleType="fitXY"
        android:text="@string/rememberBtn"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/unknown_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/unknown_btn"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@color/colorDefault"
        android:scaleType="fitXY"
        android:text="@string/unknownBtn"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/meta_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Metadata"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

</androidx.constraintlayout.widget.ConstraintLayout>